adição de imagens; estilização header e hero

--- a/index.html
+++ b/index.html
@@ -5,9 +5,59 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Arthur Santana</title>
+	<link rel="stylesheet" href="./assets/css/reset.css">
 	<link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+	<header class="header">
+		<img src="./assets/img/logos-as/arthur santana-b-no-shadow.png" alt="" class="site-logo">
+		<nav>
+			<ul>
+				<li>
+					<a href="">
+						sobre mim
+					</a>
+				</li>
+				<li>
+					<a href="">
+						meus projetos
+					</a>
+				</li>
+				<li>
+					<a href="">
+						contato
+					</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
+
+	<section class="hero">
+		<div class="hero__content">
+			<h1 class="hero__title">
+				olá!
+			</h1>
+			<p class="hero__desc">
+				bem-vindo(a) <br>
+				ao meu site!
+			</p>
+		</div>
+	</section>
+
+	<section class="card sobre-mim">
+		<h2 class="card__title">
+			sobre mim
+		</h2>
+		<p class="card__content">
+			Me chamo Arthur, tenho 15 anos e sou fanático por tecnologia e programação. Estudo desenvolvimento de software, principalmente front-end <br> <br>
+
+			Há mais de um ano, comecei a estudar Python pelo <mark>Curso em Vídeo</mark>, do Gustavo Guanabara. Adorava usar estruturas lógicas simples para mostrar um resultado no terminal. Mas cade a interface? Ninguém gosta de telas pretas! Por isso, iniciei o curso de HTML e CSS da mesma plataforma. <br> <br>
+
+			Daí pra frente, foi pura aprendizagem: media querries, layout Flexbox, Grid, nomenclatura BEM, descobri como manipular elementos com Javascript e Jquery... <br> <br>
+
+			Atualmente estudo React e Frameworks CSS, como o Bootstrap.
+		</p>
+	</section>
 	
 	<script src="./assets/js/script.js"></script>
 </body>
