estilização de cards e animação

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
 	<link rel="stylesheet" href="./assets/css/reset.css">
 	<link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
 	<header class="header">
 		<img src="./assets/img/logos-as/arthur santana-b-no-shadow.png" alt="" class="site-logo">
@@ -49,16 +51,22 @@
 			sobre mim
 		</h2>
 		<p class="card__content">
-			Me chamo Arthur, tenho 15 anos e sou fanático por tecnologia e programação. Estudo desenvolvimento de software, principalmente front-end <br> <br>
+			Me chamo Arthur, tenho 15 anos e sou fanático por tecnologia e programação. Estudo desenvolvimento de
+			software, principalmente front-end <br> <br>
 
-			Há mais de um ano, comecei a estudar Python pelo <mark>Curso em Vídeo</mark>, do Gustavo Guanabara. Adorava usar estruturas lógicas simples para mostrar um resultado no terminal. Mas cade a interface? Ninguém gosta de telas pretas! Por isso, iniciei o curso de HTML e CSS da mesma plataforma. <br> <br>
+			Há mais de um ano, comecei a estudar Python pelo <a href="https://www.cursoemvideo.com/"
+				class="card__link">Curso em Vídeo</a>, do Gustavo Guanabara. Adorava usar estruturas lógicas simples
+			para mostrar um resultado no terminal. Mas cade a interface? Ninguém gosta de telas pretas! Por isso,
+			iniciei o curso de HTML e CSS da mesma plataforma. <br> <br>
 
-			Daí pra frente, foi pura aprendizagem: media querries, layout Flexbox, Grid, nomenclatura BEM, descobri como manipular elementos com Javascript e Jquery... <br> <br>
+			Daí pra frente, foi pura aprendizagem: media querries, layout Flexbox, Grid, nomenclatura BEM, descobri como
+			manipular elementos com Javascript e Jquery... <br> <br>
 
 			Atualmente estudo React e Frameworks CSS, como o Bootstrap.
 		</p>
 	</section>
-	
+
 	<script src="./assets/js/script.js"></script>
 </body>
+
 </html>
